# noahs-aRk

./: Cargo.toml  README.md  demo-keys.md  demo_keys  public-testnet-1.json  user-guide.md  wallets_9371743.json
.github/workflows/: test.yml
pallets/air-drop/: Cargo.toml
pallets/air-drop/src/: lib.rs
pallets/validator-set/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: chain_spec.rs  command.rs  main.rs  service.rs
