[profile.release]
panic = 'unwind'

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'Noahs-aRk'
version = '0.1.0'


[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'


[dependencies]
futures = '0.3.1'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'
structopt = '0.3.8'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.futures01]
package = 'futures'
version = '0.1.29'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'


[dependencies.runtime]
package = 'noahs-ark-runtime'
path = 'runtime'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'


[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'
version = '0.8'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'


[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'


[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'


[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'


[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'


[workspace]
members = [
	'runtime',
	'pallets/validator-set',
	'pallets/air-drop',
]

[[bin]]
name = 'noahs-ark'
path = 'src/main.rs'
