[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.indices]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-indices'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.session]
default-features = false
package = 'pallet-session'
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'
version = '0.8'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'


[dependencies.validator-set]
default-features = false
path = '../pallets/validator-set'

[dependencies.democracy]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-democracy'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'

[features]
default = ['std']
std = [
    'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'indices/std',
    'randomness-collective-flip/std',
    'safe-mix/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'validator-set/std',
    'democracy/std',
]

[package]
authors = ['Anonymous']
edition = '2018'
name = 'noahs-ark-runtime'
version = '0.1.0'

[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = '85b65a38330e732689c5d8d5cfe75ba53b9dc873'
version = '1.0.4'
