[package]
name = "air-drop"
version = "0.1.0"
authors = ["Parity Technologies, Joshy Orndorff"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'system/std',
    'serde',
    'rustc-hex/std',
]

[dependencies.rustc-hex]
version = "2.0.1"
default-features = false

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dev-dependencies]
hex-literal = "0.2.1"
libsecp256k1 = "0.3.2"
tiny-keccak = "1.5.0"
balances = {package = "pallet-balances", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'}
vesting = {package = "pallet-vesting", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'}
serde_json = "1.0.41"
