[package]
name = "validator-set"
version = "0.1.0"
authors = ["gautamdhameja"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'system/std',
    'serde',
    'session/std'
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'

[dependencies.session]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-session'
rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'
